corrected location extraction

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 
                     <p class="address mb-2">
                         <i class="fas fa-map-marker-alt text-danger"></i>
-                        {{ restaurant.street }} {{ restaurant.house_number }},
+                        {{ restaurant.street_no }},
                         {{ restaurant.postal_code }} {{ restaurant.city }}
                     </p>
                     <div class="mt-3 d-flex justify-content-between">
