--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,37 @@
         </div>
         {% endfor %}
     </div>
+           <!-- Contact Section-->
+           <section class="page-section" id="contact">
+            <div class="container">
+                <!-- Contact Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Dein Lieblingsrestaurant fehlt? </h2>
+                <h4 class="page-section-sub-heading text-center text-uppercase text-secondary mt-4">Schreib mir hier und es wird der Liste hinzugefügt </h4>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Contact Section Form-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-xl-7">
+                        <form action="/send_message" method="POST">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required><br><br>
+                            
+                            <label for="email">E-Mail:</label>
+                            <input type="email" id="email" name="email" required><br><br>
+                            
+                            <label for="message">Nachricht:</label><br>
+                            <textarea id="message" name="message" rows="5" required></textarea><br><br>
+                            
+                            <button type="submit">Absenden</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
 </div>
 {% endblock %}
 {% block scripts %}
